Adicionado estilos do materialize, página de sobre e alterado estilo das páginas

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -10,19 +10,14 @@
 	</header>
 
 	<main>
-		<div>
-			<h2>Home</h2>
-
-			<p>Welcome to my RESTFull API</p>
-			<p>You can send mails and register data for the interview APP.</p>
-			<p>Access <a href="about">about</a> in order to get more info.</p>
-            
+		<h3>Welcome to my RESTFull API</h3>
+		<div class="container">
+			<p class="flow-text">You can send mails and register data for the interview APP.</p>
+			<p class="flow-text">Access <a href="about">about</a> in order to get more info.</p>
 		</div>
 	</main>
 
-	<footer>
-		<% include ../partials/footer %>
-	</footer>
+	<% include ../partials/footer %>
 	
 </body>
-</html>
+</html>	
