--- a/views/pages/registerConfirmation.ejs
+++ b/views/pages/registerConfirmation.ejs
@@ -11,17 +11,15 @@
 
 	<main>
 		<div>
-			<h2>Register your user account</h2>
+			<h2>Your account has been registered.</h2>
 
-			<p id="user">Usuário <b><%= username %></b> criado com sucesso.</p>
-			<p id="token">Token <b><%= token %></b> foi gerado.</p>
+			<p id="user">User <b><%= username %></b> has been created.</p>
+			<p id="token">Use this token: <b><%= token %></b> in order to send your mails.</p>
 
 		</div>
 	</main>
 
-	<footer>
-		<% include ../partials/footer %>
-	</footer>
+	<% include ../partials/footer %>
 	
 </body>
 </html>
