--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,23 @@
 
- <!-- JAVASCRIPT -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-<script src="/js/token.js"></script>
-<p class="text-center text-muted">&copy; Copyright 2018 Tiago Aro</p>
+ <footer class="page-footer">
+ 	<script src="http://code.jquery.com/jquery-latest.min.js"></script> 
+
+	 <!-- JAVASCRIPT -->
+	<script src="/js/token.js"></script>
+	<script src="/js/materialize.min.js"></script>
+	<!-- INITIATE SIDENAV -->
+ 	<script type="text/javascript">
+ 		  let elem = document.querySelector('.sidenav');
+		  let instance = new M.Sidenav(elem);
+		  $(document).ready(function(){
+		   $('.sidenav').sidenav();
+		  });
+ 	</script>
+
+	<div class="footer-copyright">
+	    <div class="container">
+	        © 2018 Copyright Tiago Aro
+	    	<a class="grey-text text-lighten-4 right" href="https://github.com/Tgaro">About me</a>
+	    </div>
+	</div>
+</footer?
