--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -10,41 +10,41 @@
 	</header>
 
 	<main>
-		<div>
-			<h2>Register your user account</h2>
+		<div class="row">
+			<div class="col s12 m6 offset-m3">
+				<div class="card center-align">
+					<div class="card-content">
+						<span class="card-title center-align">Register your user account</span>
 
-			<form action="register" method="POST">
+						<form action="register" method="POST">
 
-				<div class="row">
-			        <div class="input-field col s6">
-			          <input id="user" name="user" type="text" class="validate">
-			          <label for="user">User</label>
-			        </div>
-			    </div>
+							<div class="row">
+						        <div class="input-field">
+						          <input id="user" name="user" type="text" class="validate">
+						          <label for="user">User</label>
+						        </div>
+						    </div>
 
-			    <div class="row">
-			        <div class="input-field col s6">
-			          <input id="pass" name="pass" type="password" class="validate">
-			          <label for="pass">Password</label>
-			        </div>
-			    </div>
-
-		        <div class="row">
-			        <div class="input-field col s6">
-			          <input id="token" name="token" type="text" class="validate">
-			          <label for="token">Token</label>
-			        </div>
-			    </div>
-
-	            <button id="btnRegister" class="btn btn-lg up-btn" type="submit">Register</button>
-
-            </form>
+						    <div class="row">
+						        <div class="input-field">
+						          <input id="pass" name="pass" type="password" class="validate">
+						          <label for="pass">Password</label>
+						        </div>
+						    </div>
+						    
+						    <input id="token" name="token" type="hidden">
+						    
+						    <div class="card-action">
+						    	<button id="btnRegister" class="btn btn-lg up-btn" type="submit">Register</button>
+						    </div>
+			            </form>
+		            </div>
+	        	</div>
+	        </div>
 		</div>
 	</main>
-
-	<footer>
-		<% include ../partials/footer %>
-	</footer>
+	
+	<% include ../partials/footer %>
 	
 </body>
 </html>
