--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,9 +1,19 @@
   <nav>
     <div class="nav-wrapper">
-      <a href="\" class="brand-logo right">RESTFull API</a>
+      <a href="#!" class="brand-logo right">RESTFull API</a>
+      <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       <ul id="nav-mobile" class="left hide-on-med-and-down">
+      	<li><a href="\">Home</a></li>
         <li><a href="register">Register User</a></li>
         <li><a href="sendMail">Send Mail</a></li>
+        <li><a href="about">About</a></li>
       </ul>
     </div>
   </nav>
+
+  <ul class="sidenav" id="mobile-demo">
+    <li><a href="\">Home</a></li>
+    <li><a href="register">Register User</a></li>
+    <li><a href="sendMail">Send Mail</a></li>
+    <li><a href="about">About</a></li>
+  </ul>
