Alterado cores do header e footer. Acrescentada página de sendMail

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 
- <footer class="page-footer">
+ <footer class="page-footer teal">
  	<script src="http://code.jquery.com/jquery-latest.min.js"></script> 
 
 	 <!-- JAVASCRIPT -->
