--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -21,14 +21,14 @@
 							<div class="row">
 						        <div class="input-field">
 						          <input id="user" name="user" type="text" class="validate">
-						          <label for="user">User</label>
+						          <label for="user">Enter e-mail</label>
 						        </div>
 						    </div>
 
 						    <div class="row">
 						        <div class="input-field">
 						          <input id="pass" name="pass" type="password" class="validate">
-						          <label for="pass">Password</label>
+						          <label for="pass">Enter password</label>
 						        </div>
 						    </div>
 						    
