Refactoring da estrutura do projeto

--- a/app/views/partials/footer.ejs
+++ b/app/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 
- <footer class="page-footer teal">
+ <footer class="page-footer">
  	<script src="http://code.jquery.com/jquery-latest.min.js"></script> 
 
 	 <!-- JAVASCRIPT -->
