--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -1,5 +1,5 @@
   <nav>
-    <div class="nav-wrapper teal">
+    <div class="nav-wrapper">
       <a href="#!" class="brand-logo right">RESTFull API</a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       <ul id="nav-mobile" class="left hide-on-med-and-down">
